fix spacing

--- a/A1/style.css
+++ b/A1/style.css
@@ -26,9 +26,15 @@ header {
 }
 
 main {
-    margin-top: 161px;
+    margin-top: 128px;
     margin-bottom: 128px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;
+    display: flex;
 }
+
 
 .navbar {
     position: sticky;
@@ -78,15 +84,11 @@ nav>ul>li>a:hover {
 }
 
 .portrait img{
-    height: auto;
+    object-fit: cover;
+    display: block;
+    height: 100%;
     width: 100%;
-}
 
-
-.home_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 .current > a{
@@ -184,12 +186,6 @@ footer p{
     height: 3rem;
 }
 
-.about_container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
 details > summary {
     font-size: 20px;
     font-family: "Inter", sans-serif;
@@ -229,12 +225,6 @@ embed {
     max-width: 720px;
     width: 720px;
     height: 60vh;
-}
-
-.contact-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
 }
 
 form {
